# Ludex

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: dev.mjs  ipc.test.ts  ipc.ts  main.ts  preload.ts  types.ts  write-cjs-package.mjs
apps/desktop/electron/services/: fileDialog.ts  launcher.ts  security.test.ts  security.ts
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/scanners/: mod.rs
apps/desktop/src/api/: ludexApi.ts
apps/desktop/src/components/: ui.tsx
apps/desktop/src/data/: designPreviewGames.ts  mockGames.ts  mockSyncGames.ts
apps/desktop/src/lib/: apiClient.test.ts  apiClient.ts  desktopCommands.ts  gameUtils.ts  tauriCommands.ts  tokenStore.ts
apps/desktop/src/types/: api.ts  ui.ts
backend/api/: .env.example  composer.json  phpunit.xml
backend/api/app/Jobs/: FetchGameMetadataJob.php
backend/api/app/Models/: Game.php  GameLibrary.php  Platform.php  PlaySession.php  ScanLog.php  Tag.php  User.php  UserGame.php
backend/api/bootstrap/: app.php
backend/api/config/: app.php  cache.php  database.php  sanctum.php  session.php
backend/api/database/seeders/: DatabaseSeeder.php  (+1 more)
backend/api/routes/: api.php  console.php
docker/backend/: Dockerfile
docs/: api.md  architecture.md  decisions.md  design.md  scanners.md  security.md
(+65 files in other folders)
