[package]
name = "ludex"
version = "0.1.0"
description = "Ludex desktop launcher"
authors = ["Ludex"]
edition = "2021"

[lib]
name = "ludex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
